--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <!-- BEST PRACTICE START -->
             <div class="container" id="best">
                 <div class="row">
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-sm-6">
                         <div class="card mb-1">
                             <img class="card-img-top maximg" src="img/des-ai.jpeg" alt="Moderator materi Artificial intelegence untuk pembelajaran">
                             <div class="card-body">
@@ -111,7 +111,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-sm-6">
                         <div class="card mb-1">
                             <img class="card-img-top maximg" src="img/des-kkg.jpeg" alt="Perjalanan untuk menjadi duta teknologi kemendikbudristek">
                             <div class="card-body">
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-sm-6">
                         <div class="card mb-1">
                             <img class="card-img-top maximg" src="img/des-pmm.jpeg" alt="Membuat Aksi nyata PMM menggunakan Canva">
                             <div class="card-body">
@@ -127,7 +127,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-sm-6">
                         <div class="card mb-1">
                             <img class="card-img-top maximg" src="img/des-58.jpeg" alt="Membuat Game Edukasi menggunakan Scratch">
                             <div class="card-body">
