--- a/practice.html
+++ b/practice.html
@@ -37,13 +37,41 @@
         <div class="best">
             <!-- BEST PRACTICE START -->
             <div class="container" id="best">
+                <h3>Februari 2024</h3>
+                <div class="row">
+                    <div class="col-lg-3">
+                        <div class="card mb-1">
+                            <img class="card-img-top maximg" src="img/februari/pmm-kinerja.jpg" alt="Rubrik Observasi Kelas Pengelolaan Kinerja PMM Kemendikbudristek">
+                            <div class="card-body">
+                            <p class="card-text"><h6>7 FEBRUARI 2024</h6><br>SMP 126 Jakarta<br>Rubrik Observasi Kelas Pengelolaan Kinerja PMM Kemendikbudristek</p><br>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="card mb-1">
+                            <img class="card-img-top maximg" src="img/februari/quizizz.jpeg" alt="Pengenalan Platform Assesmen Quizizz">
+                            <div class="card-body">
+                            <p class="card-text"><h6>12 Februari 2024</h6><br>PMM Komunitas Belajar<br>Pengenalan Platform Assesmen Quizizz</p><br>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="card mb-1">
+                            <img class="card-img-top maximg" src="img/jan-tiktok.png" alt="Observasi Pengelolaan Kinerja">
+                            <div class="card-body">
+                            <p class="card-text"><h6>15 Februari 2024</h6><br>SMP 126 Jakarta<br>Persiapan Observasi Pengelolaan Kinerja</p><br>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
                 <h3>JANUARI 2024</h3>
                 <div class="row">
                     <div class="col-lg-3">
                         <div class="card mb-1">
                             <img class="card-img-top maximg" src="img/jan-pmm.jpeg" alt="Substansi Pengelolaan Kinerja PMM Kemendikbudristek">
                             <div class="card-body">
-                            <p class="card-text"><h6>10 Januari 2023</h6><br>SMP 126 Jakarta<br>Substansi Pengelolaan Kinerja PMM Kemendikbudristek</p><br>
+                            <p class="card-text"><h6>10 Januari 2024</h6><br>SMP 126 Jakarta<br>Substansi Pengelolaan Kinerja PMM Kemendikbudristek</p><br>
                             </div>
                         </div>
                     </div>
