--- a/practice.html
+++ b/practice.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="col-lg-3">
                         <div class="card mb-1">
-                            <img class="card-img-top maximg" src="img/jan-263.jpeg" alt="Substansi Pengelolaan Kinerja PMM Kemendikbudristek">
+                            <img class="card-img-top maximg" src="img/februari/observasi.png" alt="Substansi Pengelolaan Kinerja PMM Kemendikbudristek">
                             <div class="card-body">
                             <p class="card-text"><h6>11 Januari 2024</h6><br>SMPN 263 Jakarta<br>Substansi Pengelolaan Kinerja PMM Kemendikbudristek</p><br>
                             </div>
