--- a/practice.html
+++ b/practice.html
@@ -37,6 +37,26 @@
         <div class="best">
             <!-- BEST PRACTICE START -->
             <div class="container" id="best">
+                <h3>Maret 2024</h3>
+                <div class="row">
+                    <div class="col-lg-3">
+                        <div class="card mb-1">
+                            <img class="card-img-top maximg" src="img/maret/jakartaglobal.png" alt="Transformasi Pendidikan Menuju Jakarta Global City">
+                            <div class="card-body">
+                            <p class="card-text"><h6>5 Maret 2024</h6><br>Aula Kihajar Dinas Pendidikan DKI Jakarta<br>Transformasi Pendidikan Menuju Jakarta Global City</p><br>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="card mb-1">
+                            <img class="card-img-top maximg" src="img/maret/jakarta global2.png" alt="Transformasi Pendidikan Menuju Jakarta Global City">
+                            <div class="card-body">
+                            <p class="card-text"><h6>6 Maret 2024</h6><br>PMM Komunitas Belajar<br>Transformasi Pendidikan Menuju Jakarta Global City</p><br>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <h3>Februari 2024</h3>
                 <div class="row">
                     <div class="col-lg-3">
