--- a/practice.html
+++ b/practice.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="col-lg-3">
                         <div class="card mb-1">
-                            <img class="card-img-top maximg" src="img/jan-tiktok.png" alt="Observasi Pengelolaan Kinerja">
+                            <img class="card-img-top maximg" src="img/februari/observasi.png" alt="Observasi Pengelolaan Kinerja">
                             <div class="card-body">
                             <p class="card-text"><h6>15 Februari 2024</h6><br>SMP 126 Jakarta<br>Persiapan Observasi Pengelolaan Kinerja</p><br>
                             </div>
