--- a/practice.html
+++ b/practice.html
@@ -43,7 +43,7 @@
                         <div class="card mb-1">
                             <img class="card-img-top maximg" src="img/maret/jakartaglobal.png" alt="Transformasi Pendidikan Menuju Jakarta Global City">
                             <div class="card-body">
-                            <p class="card-text"><h6>5 Maret 2024</h6><br>Aula Kihajar Dinas Pendidikan DKI Jakarta<br>Transformasi Pendidikan Menuju Jakarta Global City</p><br>
+                            <p class="card-text"><h6>5 Maret 2024</h6><br>Dinas Pendidikan DKI Jakarta<br>Transformasi Pendidikan Menuju Jakarta Global City</p><br>
                             </div>
                         </div>
                     </div>
@@ -51,7 +51,7 @@
                         <div class="card mb-1">
                             <img class="card-img-top maximg" src="img/maret/jakarta global2.png" alt="Transformasi Pendidikan Menuju Jakarta Global City">
                             <div class="card-body">
-                            <p class="card-text"><h6>6 Maret 2024</h6><br>PMM Komunitas Belajar<br>Transformasi Pendidikan Menuju Jakarta Global City</p><br>
+                            <p class="card-text"><h6>6 Maret 2024</h6><br>Dinas Pendidikan DKI Jakarta<br>Transformasi Pendidikan Menuju Jakarta Global City</p><br>
                             </div>
                         </div>
                     </div>
