--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="#profile">Profil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#best">Praktik Baik</a>
+                        <a class="nav-link" href="#best">Aktivitas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#plan">Program Kerja</a>
@@ -138,7 +138,7 @@
 
                 </div>
                 <br>
-                <a href="practice.html"><button type="button" class="btn btn-primary">View More</button></a>
+                <a href="activity.html"><button type="button" class="btn btn-primary">View More</button></a>
             </div>
             <!-- BEST PRACTICE ENDS -->
 
