--- a/activity.html
+++ b/activity.html
@@ -61,7 +61,7 @@
                 <div class="row">
                     <div class="col-lg-3">
                         <div class="card mb-1">
-                            <img class="card-img-top maximg" src="img/februari/pmm-kinerja.jpg" alt="Rubrik Observasi Kelas Pengelolaan Kinerja PMM Kemendikbudristek">
+                            <img class="card-img-top maximg" src="img/februari/kinerja.jpg" alt="Rubrik Observasi Kelas Pengelolaan Kinerja PMM Kemendikbudristek">
                             <div class="card-body">
                             <p class="card-text"><h6>7 FEBRUARI 2024</h6><br>SMP 126 Jakarta<br>Rubrik Observasi Kelas Pengelolaan Kinerja PMM Kemendikbudristek</p><br>
                             </div>
